--- a/modularized/web/templates/labs.html
+++ b/modularized/web/templates/labs.html
@@ -24,26 +24,30 @@
                 <!-- <label for="new_lab_email" class="my-2">Lab Safety Email:</label>
                 <input type="email" class="form-control" name="lab_safety_email" id="new_lab_email" required> -->
 
-                <!--                <label for="new_lab_telegram" class="my-2">Lab Safety Telegram:</label>-->
-                <!--                <input type="telegram" class="form-control" name="lab_safety_telegram" id="new_lab_telegram"-->
-                <!--                       value="{{ lab_safety_telegram }}">-->
-
-                <!--                <div class="mt-3">-->
-                <!--                    <h5>Login with Telegram</h5>-->
-                <!--                    <div id="telegram-login-button">-->
-                <!--                        <script async src="https://telegram.org/js/telegram-widget.js?7"-->
-                <!--                                data-telegram-login="incompoop_bot"-->
-                <!--                                data-size="large" data-userpic="false" data-request-access="write"-->
-                <!--                                data-auth-url="https://rident-zoila-unhistoric.ngrok-free.dev/telegram_callback"-->
-                <!--                                data-lang="en">-->
-                <!--                        </script>-->
-                <!--                    </div>-->
-                <!--                </div>-->
             </div>
 
             <button type="submit" class="btn btn-primary mt-2">Add Lab</button>
         </form>
     </div>
+</div>
+
+<div class="card mb-4">
+    <div class="mt-3">
+        <h5>Login with Telegram</h5>
+        <div id="telegram-login-button">
+            <script async src="https://telegram.org/js/telegram-widget.js?7"
+                    data-telegram-login="incompoop_bot"
+                    data-size="large" data-userpic="false" data-request-access="write"
+                    data-auth-url="https://rident-zoila-unhistoric.ngrok-free.dev/telegram_callback"
+                    data-lang="en">
+            </script>
+        </div>
+    </div>
+
+    <label for="new_lab_telegram" class="my-2">Lab Safety Telegram:</label>
+    <input type="telegram" class="form-control" name="lab_safety_telegram" id="new_lab_telegram"
+           value="{{ lab_safety_telegram }}">
+
 </div>
 
 {% if all_lab_details %}
@@ -52,7 +56,7 @@
     <div class="card-header d-flex justify-content-between align-items-center">
         <h3 class="mb-0">Lab: {{ lab.lab_name }}</h3>
         <form method="post" action="{{ url_for('labs') }}"
-            onsubmit="return confirm('WARNING: Are you sure you want to delete this lab? This action cannot be undone.')">
+              onsubmit="return confirm('WARNING: Are you sure you want to delete this lab? This action cannot be undone.')">
             <input type="hidden" name="action" value="delete">
             <input type="hidden" name="lab_id" value="{{ lab.labid }}">
             <button type="submit" class="btn btn-danger btn-sm">Delete Lab</button>
@@ -65,7 +69,7 @@
                 <div class="col">
                     <label for="lab_name_{{ lab.labid }}" class="visually-hidden">Lab Name</label>
                     <input type="text" name="new_lab_name" id="lab_name_{{ lab.labid }}" class="form-control"
-                        value="{{ lab.lab_name }}">
+                           value="{{ lab.lab_name }}">
                 </div>
                 <div class="col-auto" style="width: 150px;">
                     <input type="hidden" name="action" value="update">
@@ -81,37 +85,39 @@
         {% if all_lab_emails[labid] %}
         <table class="table table-borderless">
             <thead>
-                <tr>
-                    <th scope="col">Email</th>
-                    <th scope="col">Telegram</th>
-                    <th scope="col" colspan="2">Actions</th>
-                </tr>
+            <tr>
+                <th scope="col">Email</th>
+                <th scope="col">Telegram</th>
+                <th scope="col" colspan="2">Actions</th>
+            </tr>
             </thead>
             <tbody>
-                {% for staffid, email, telegram in all_lab_emails[labid] %}
-                <form method="post" action="{{ url_for('labs') }}">
-                    <tr>
-                        <td class="w-auto">
-                            <input type="hidden" name="staffid" value="{{ staffid }}">
-                            <input type="email" name="email" value="{{ email }}" required class="form-control">
-                            <input type="hidden" name="original_email" value="{{ email }}">
-                        </td>
-                        <td class="w-auto">
-                            <input type="text" name="telegram" value="{{ telegram }}" required class="form-control">
-                            <input type="hidden" name="original_telegram" value="{{ telegram }}">
-                        </td>
-                        <td style="width: 75px;">
-                            <button type="submit" name="action" value="update_lab_staff"
-                                class="btn btn-primary btn-sm w-100">Update</button>
-                        </td>
-                        <td style="width: 75px;">
-                            <button type="submit" name="action" value="delete_lab_staff"
+            {% for staffid, email, telegram in all_lab_emails[labid] %}
+            <form method="post" action="{{ url_for('labs') }}">
+                <tr>
+                    <td class="w-auto">
+                        <input type="hidden" name="staffid" value="{{ staffid }}">
+                        <input type="email" name="email" value="{{ email }}" required class="form-control">
+                        <input type="hidden" name="original_email" value="{{ email }}">
+                    </td>
+                    <td class="w-auto">
+                        <input type="text" name="telegram" value="{{ telegram }}" required class="form-control">
+                        <input type="hidden" name="original_telegram" value="{{ telegram }}">
+                    </td>
+                    <td style="width: 75px;">
+                        <button type="submit" name="action" value="update_lab_staff"
+                                class="btn btn-primary btn-sm w-100">Update
+                        </button>
+                    </td>
+                    <td style="width: 75px;">
+                        <button type="submit" name="action" value="delete_lab_staff"
                                 class="btn btn-danger btn-sm w-100"
-                                onclick="return confirm('Are you sure you want to delete this lab staff?');">Delete</button>
-                        </td>
-                    </tr>
-                </form>
-                {% endfor %}
+                                onclick="return confirm('Are you sure you want to delete this lab staff?');">Delete
+                        </button>
+                    </td>
+                </tr>
+            </form>
+            {% endfor %}
             </tbody>
         </table>
         {% else %}
@@ -125,11 +131,14 @@
                 <input type="hidden" name="lab_id" value="{{ lab.labid }}">
                 <div id="new-staff-container-{{ lab.labid }}" class="mb-3"></div>
                 <button type="button" id="start-add-staff-btn-{{ lab.labid }}" class="btn btn-primary btn-sm"
-                    onclick="addNewStaff({{ labid }})">+ Add New Staff</button>
+                        onclick="addNewStaff({{ labid }})">+ Add New Staff
+                </button>
                 <button type="button" id="add-another-staff-btn-{{ lab.labid }}" class="btn btn-secondary btn-sm d-none"
-                    onclick="addNewStaff({{ labid }})">+ Add Another Staff Member</button>
+                        onclick="addNewStaff({{ labid }})">+ Add Another Staff Member
+                </button>
                 <button type="submit" id="save-staff-btn-{{ lab.labid }}" class="btn btn-success btn-sm d-none">Save New
-                    Staff</button>
+                    Staff
+                </button>
             </form>
         </div>
     </div>
